--- a/chapter2-recsys.tex
+++ b/chapter2-recsys.tex
@@ -1,4 +1,14 @@
 \chapter{Recommender Systems}
 \label{ch:recsys}
 
-% multi stakeholder concept as well
+% intro
+% goals of recsys
+% basic models of recsys
+    % CF
+        % ratings, implicit and explicit, missing values
+    % content based
+    % knowledge based
+    % demographic recsys
+    % hybrid and ensembles
+    % evaluation of recsys
+    % domain specific challenges
