--- a/refs.bib
+++ b/refs.bib
@@ -1174,6 +1174,23 @@ series = {FAT* '19}
 }
 
 
+@inproceedings{binns2020conflict,
+author = {Binns, Reuben},
+title = {On the Apparent Conflict between Individual and Group Fairness},
+year = {2020},
+isbn = {9781450369367},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3351095.3372864},
+doi = {10.1145/3351095.3372864},
+booktitle = {Proceedings of the 2020 Conference on Fairness, Accountability, and Transparency},
+pages = {514–524},
+numpages = {11},
+location = {Barcelona, Spain},
+series = {FAT* '20}
+}
+
+
 @article{Gosepath2011equality,
   title={Equality},
   author={Gosepath S.},
@@ -4590,6 +4607,13 @@ archivePrefix = {arXiv},
   publisher={Springer},
   doi={10.1007/s11257-019-09256-1},
   year={2020},
+}
+
+@article{abdollahpouri2020addressing,
+  title={Addressing the Multistakeholder Impact of Popularity Bias in Recommendation Through Calibration},
+  author={Abdollahpouri, Himan and Mansoury, Masoud and Burke, Robin and Mobasher, Bamshad},
+  journal={arXiv preprint arXiv:2007.12230},
+  year={2020}
 }
 
 @misc{burke2017multisided,
