--- a/chapter3-fairness.tex
+++ b/chapter3-fairness.tex
@@ -32,7 +32,7 @@ In this chapter, we provide a short overview on algorithmic fairness, for classi
 \label{sec:fair_ml}
     
     \todo[inline]{more on the fairness concept}
-    Fairness is a convoluted and contested concept and it does not encapsulate one definition. Algorithmic fairness as well, is not one goal, but rather a spectrum of different equity concerns.
+    Fairness is a complex concept and it does not encapsulate one definition. Algorithmic fairness as well, is not one goal, but rather a spectrum of different equity concerns.
     
     To understand algorithmic unfairness, initially, we need to recognize the type of unfairness that happens in a system, understand the stakeholders (consumers, providers, and etc.) that are affected by the harms caused by this unfairness. It is only after taking these steps that we can design methods to assess a system's unfairness and finally design approaches to diminish unfairness in that system.
     
@@ -41,62 +41,135 @@ In this chapter, we provide a short overview on algorithmic fairness, for classi
     In addition to these traps, one should understand that fairness, in its foundation, is contextual, and contestable. Additionally, incompatibility of different fairness notions \cite{friedler-impossibility-2021} implies that universal fairness is not an achievable (and even meaningful) concept.
     
     Considering the discussed limitations, researchers identify specific ways in which they \textbf{can} determine a system's (mathematically and reasonably definable) unfairness and try to develop tools to measure and mitigate unfairness in different domains. Much of the work in algorithmic fairness has been focused on classification with a myriad of definitions that has been proposed. The key definitions are explained in \cite{mitchell2021algorithmic,barocas2016big,barocas2018fairness}.
+    
+    To clarify unfairness definitions and to apply the appropriate solutions to mitigate it, we need to break them down into different categories. And this categorization (along with their assigned names) is based on the type of harm (distributional or representational) that happens in a system, the location in the pipeline that it happens, and whether this harm is affecting individuals or groups of users and how unfairness is measured. In the following paragraphs, I will discuss these fairness definitions further.
 
     In the algorithmic fairness scholarship, sometimes the terms such as "bias", "fairness", "discrimination", "inequity", and "injustice", which were mostly borrowed from legal scholarship, are used interchangeably without considering their nuances. Therefore, different authors use these terms subjectively to some extent. Therefore it is important to understand the usage of these words from the perspective of different authors. Throughout this dissertation, I will specifically determine the type of unfairness for every research problem, but will use these words interchangeably as well.
     
-    Algorithmic fairness in machine learning often addresses two major issues: (1) distributional harms and, (2) representational harms\cite{crawford2017trouble}. Distributional harm occurs when the positive or negative effects, outcomes or resources are not distributed fairly among its subjects. While in representational harms, subjects are not represented fairly by and in the system. 
+    \subsection{Individual \& Group fairness}
+        
+        When we assess the unfairness of a system, is it also important to identify whether individuals or groups of users are being affected. 
+        
+        \textbf{(\romannum{1})~Individual fairness} is concerned with the similar treatment of similar users. This normative principle requires that like cases should be treated alike \cite{binns2020conflict} which is a fairness notion that goes back to Aristotle.
+        
+        Cynthia Dwork (2012) \cite{Dwork2012individual} introduces the concept of individual fairness which posits that similar individuals with respect to the task at hand should be treated similarly or in other words should have similar probabilities of positive classification outcomes. One of the limitations of this method is the choice of similarity metric to compare individuals and whether this metric is unbiased. This method also doesn't place any requirement on the treatment of dissimilar individuals. Additionally, this method will not be able to violate individual fairness for highly dissimilar individuals. 
+
+        Another individual fairness definition was proposed by \cite{pmlr-v70-kearns17a} for the problem of candidate set selection from diverse incomparable source sets. Choosing candidates for a research position from a diverse research communities with incomparable research metrics (e.g. citation rates are different in different research communities) is an example of this problem. Meritocratic fairness requires that less qualified candidates are probabilistically almost never chosen over the more qualified candidates.
+        
+        \textbf{(\romannum{2})~Group fairness} is concerned with ensuring different groups have comparable experiences with the system. These groups are formed based on a sensitive attribute like race, gender, age, etc. The sensitive attribute definition is usually rooted in anti-discrimination laws\cite{barocas2016big}. This notion of fairness tries to ensure that algorithms don't impact the members of the protected group more adversely and disproportionately. Group-based methods of fairness has helped build the most prevalent structures to achieve and assess fairness ~\cite{zemel2013learning,kamishima2012fairness,kamiran2010discrimination,zhang2017anti}.
+        
+        \textbf{(\romannum{3})~WYSIWIG \& WAE}
+        
+        There are two types of axiomatic assumptions behind fairness definitions and metrics \cite{friedler-impossibility-2021}: (1) \textit{What you see is what you get (WYSIWYG)}, and (2) \textit{We're all equal}. Having a WYSIWYG assumption in a system means that the observations of features do not encode bias, therefore the system uses that unbiased information to make decisions about individuals in a way that similar individuals are treated similarly. WYSISYG seeks to achieve fairness for individuals rather than a group of users. Although if the data is biased, this assumption cannot guarantee that the individuals are similar and therefore we will not treat individuals similarly anymore. Therefore this is an strong assumption. 
+        
+        The second assumption (WAE) considers that all groups are fundamentally similar with respect to a task, and so any systematic discrepancy is the result of discrimination and should be corrected for. This assumption acknowledges that the biases in the society are reflected in data which lead to disparate treatment of different groups with different sensitive features.
+        
+        % WAE can be applied in both individual fairness and group fairness. Because WAE can be interpreted as "members of different groups are the same" or "members of the different groups should be treated the same with respect to a specific task". 
+        
+        % Group fairness can also be derived from WYSIWIG or WAE assumption.
+        Instead of considering WAE or WYSIWYG as axioms, we can consider them as priors
+     
+    \subsection{Harm}
+        Algorithmic fairness in machine learning often addresses two major issues: (1) distributional harms and, (2) representational harms\cite{crawford2017trouble}. Distributional harm occurs when the positive or negative effects, outcomes or resources are not distributed fairly among its subjects. Therefore someone is denied a benefit unfairly. While in representational harms, groups or individuals are not represented fairly by and in the system. The literature in algorithmic fairness mostly considers distributional harms and proposes to increase representational fairness to reduce it.
+    
+    \subsection{Disparate Treatment \& Disparate Impact}
+        
+        \textbf{Disparate Treatment} happens when members of different groups are explicitly being treated differently \cite{barocas2016big}. This discrimination usually happens because the model has access to the sensitive attribute(s). Therefore omitting or hiding this information from the model might solve this problem.
+        Dwork et al. \cite{Dwork2012individual} discusses that "fairness by unawareness" that is achieving fairness through ignoring the the protected group status does not work because group identity usually correlates with other variables \cite{Feldman2015} therefore allows the model to pick up the differences through these variables. They suggest to use individual fairness to address this issue through "similarity with respect to task", which may compensate for group differences. WAE-based methods such as statistical parity, or error parity try to remedy this issue by requiring that different groups experience positive decisions or erroneous outcomes at the same rate.
+        
+        \textbf{Disparate Impact} \cite{Feldman2015} occurs when the impact of the system's decisions is unfairly different for different groups. In machine learning, this idea is formalized through the concept of \textbf{statistical parity}. The notion of Statistical or Demographic Parity requires that two groups with a different sensitive group have the same chance of getting a positive result. This notion has been discussed under other different names like independence \cite{barocas2018fairness}. Disparate impact is used as a test to measure unfairness in anti-classification law\cite{corbett2018measure} which is usually operationalized via the "four-fifth rule". This rule requires that the protected group pass rate should not be less than four-fifth (80\%) of the majority group pass rate. Disparate impact has a WAE (we are all equal) assumption, meaning fairness is achieved if all the groups (with similar characteristics) are treated similarly. This measure is used to ensure a ``fair'' representation of different groups in different tasks such as ranking\cite{singh2018fairness,zehlike2017fa,yang2017measuring}, and recommendation\cite{mehtora2018towards,ekstrand2018exploring}.
+    
+    
+    \subsection{Performance Parity}
+        Performance parity is an error-based construct which is used to group fairness. This family of metrics make a WYSIWIG (what you see is what you get) assumption for the outcome. They assume that the ground truth (recorded outcome in the data) is unbiased and the goal is to use it as a reference point to ensure that groups are not mistreated (experiencing a different outcome). Below are some of the most commonly used metrics to address fairness in classification.
+        
+        \textbf{Error parity}, sometimes called \textbf{disparate mistreatment} seeks to achieve equality of mis-classification rates, that is the equality of false negative rates (FNR) \cite{zafar2017fairness}. In other words, error parity ensures that different groups do not experience erroneous decisions at different rates, conditioned on their true outcome.
+        
+        \textbf{Equality of opportunity} or \textbf{recall parity} ensures the equality of true positive rates \cite{hardt2016equality}. In other words, the positive classification rates should be independent of the protected attribute given the true label. In this case, members of different groups are equally likely to receive a favorable positive decision conditioned on the positive outcome.
+        
+        \textbf{equalized odds} \cite{hardt2016equality} ensures the equality of both true positive (TPR) and false positive rates (FPR). Equality of positive predictive values, and \textbf{calibration} \cite{Kleinberg:InherentTrade} which requires equality of well-calibrated scores for all the groups, are other group fairness objectives. 
+        
+        The previously describe metrics are not the only metrics for this purpose. We can define error parity metrics on any margin of the confusion matrix \cite{mitchell2021algorithmic}. Although, it is worth noting that, based on Chouldechova-Kleinberg theorem \cite{chouldechova2017fair,Kleinberg:InherentTrade}, we cannot equalize more than two error parity metrics unless the underlying base rates are equal or the classifier is perfect. There are other fundamental tradeoffs between other error party metrics as well, for example between calibration and error-based parity metrics \cite{pleiss2017fairness}. Aside from that, the WYSIWIG assumption behind these metrics is a strong assumption about the accuracy, since it assumes the ground truth is unbiased. However, in reality the recorded data can be biased.
+        
+        Error Parity has also been studied as error parity in recommendation algorithms\cite{ekstrand2018all,yao_huang_fatml-2017}.
+
+    
+    \subsection{Anti-classification \& Anti-subordination}
+        
+        The motivation of fairness constructs also categorizes fairness definitions into two groups: anti-classification and anti-subordination. U.S. anti-discrimination law is rooted in anti-classification ideas which requires that a protected group membership such as race should not play a role in the decision making process. This notion requires to lessen the effect of disparate treatment.
+        
+        The theory of anti-subordination says that this rule is not very effective because of the past discrimination carry forward in time and therefore there is a need to actively work to reverse the effects of historical discriminatory patterns in the decision making processes \cite{barocas2016big}.
     
     Unfairness can happen in any part of a system's pipeline such as the data collection, model, evaluation, etc. I will explain different sources of unfairness in the next section.
-    
-    When we assess the unfairness of a system, is it also important to identify users or groups of users that are being affected. We need to assess whether we are being unfair to individuals or groups of users. Individual fairness is concerned with the similar treatment of similar users, while group fairness is concerned with identifying and addressing the discrepancies between different groups. These concepts will be explained in section \todo[inline]{individual vs group fairness section}.
-    
-    To clarify unfairness definitions and to apply the appropriate solutions, we need to break them down into different categories. And this categorization (along with their assigned names) is based on the type of harm (distributional or representational) that happens in a system, the location in the pipeline that it happens, and whether this harm is affecting individuals or groups of users.
-    
-    To define fairness for the recommender system, in addition to the previous categorizations, we also need to account for some additional and unique challenges such as personalization and different stakeholders' perspectives. This issue will be further discussed in section \ref{sec:fairness_recsys}.
 
     \subsection{Sources of unfairness}
-    The harms that are caused by a system arise from some type of bias, where there is a discrepancy between the expected and existing observations or the outcomes. These biases can creep into any part of the decision support system: in the outside world, in the collected data, in the development of the models, their evaluation or their application \cite{sureshframework2019}. Here we describe the sources of unfairness in different parts of a machine learning system's pipeline or the the its feedback loop. Unfairness may arise in any part of this process and may get mitigated, propagated or exacerbated or even re-formed in the same stage or the following stages.
+        The harms that are caused by a system arise from some type of bias, where there is a discrepancy between the expected and existing observations or the outcomes. These biases can creep into any part of the decision support system: in the outside world, in the collected data, in the development of the models, their evaluation or their application \cite{sureshframework2019}. Here we describe the sources of unfairness in different parts of a machine learning system's pipeline or the the its feedback loop. Unfairness may arise in any part of this process and may get mitigated, propagated or exacerbated or even re-formed in the same stage or the following stages.
+        
+        \todo[inline]{create a plot or doodle and add and refer to it here.}
+        
+        \textbf{(\romannum{1})~Society} or the outside world may be unfair. This type of bias is usually historical and ongoing. Redlining in United States housing policies \cite{rothstein2017color} is an example of this type of bias, which prevented Black Americans from home ownership in wealthier neighborhoods; neighborhoods with better amenities such as parks or better schools that improve the quality of life and childhood development. Due to such actions by private-sector and government policies, Black residents were prohibited from accessing the same opportunities for wealth building which has lead to significant racial disparity in wealth through home ownership and even disparate quality of education.
+        
+        \textbf{(\romannum{2})~Data} is another source of bias. The data can get biased during the data collection process. In some cases, some people are more likely to respond to surveys or volunteer information. This type of bias is know as response or submission bias. 
+        
+        Sampling strategies are used to collect a certain amount of data for a specific purpose might fail to collect a sample that is representative of the real data or the real world. This issue can contribute to representation bias.
+        
+        The previous issues may construct an imbalanced data where the size of different users differ. In this case, the prediction/recommendation models may become more accurate for the groups with greater group sizes as they have more data while being more erroneous in predictions for smaller sized groups.
+        
+        In the data collection process, sometimes the perspective of the people involved in the the process  can invite bias into the data, particularly if there is little engagement with the stakeholders (for whom we are providing a service) to understand their needs. These biases will go undetectable if there is not a clear documentation of the perspectives and assumptions that went into its design \cite{Hutchinson2021Account}. 
+        Lack of documentation, becomes problematic particularly when such sensitive personal attributes such as gender or race are recorded. Categorization of such attributes like gender is usually adapted from administrative data collection which might not be inclusive of all the differences. Therefore, their categorization and how they are recorded vary over time as the social and cultural constructs evolve \cite{Hanna2020CriticalRace}. Therefore it is important to interpret the data according to its time and also according to the cultural and social contexts to avoid the previous biases and to avoid unfairly disregarding local knowledge and perspectives.
+        
+        Mitchell \cite{mitchell2021algorithmic} differentiates between the societal bias and systematic or statistical bias. Societal bias is the deviation between the \textit{the world as it should and could be} and \textit{the world as it is}. Redlining is an example of societal bias, since without this bias, the world could be different with Black residents living in any neighborhood. Statistical bias results in systematic discrepancies between \textit{the world as is} and \textit{the world that the data represents}. For example, if the records of housing information differs from the actual housing, it can cause a systematic mismatch.
+        
+        \textbf{(\romannum{3})~Models} can also exacerbate the existing unfairness or introduce unfairness. Models can learn to discriminate based on the sensitive attributes with or without having these attributes in the data. Models can indirectly learn the sensitive attributes based on the correlations of other variables with the sensitive attributes or the behavioral patterns associated with those attributes.
+        
+        The objective functions may also include biased perspectives about what constitutes a \textit{good} model and result in biased outcomes.
+        
+        \textbf{(\romannum{4})~Evaluation} of machine learning algorithms is also bias prune. All of the issues with data that we discussed before (such as sampling strategies, group sizes, etc.) apply to evaluation as well. The perspectives in the design of the evaluation metric, and how these perspectives define success in the outcome can bias the outcomes. For example, if the evaluation metric is aggregate, it will hide the biases for the minority group. Or some metrics measure and reflect success on stakeholder while other experience bias. 
+        
+        Therefore, the perspective of the decision makers involved in the design of the metric, the model, the data collection methods can bias the outcomes.
+        
+        \textit{(\romannum{5})~Human responses} are another factor that bias the outcomes. Some of the machine learning systems are interactive, so they record human responses to their results and feed this data back to the system. Srivastava et al. (2019) \cite{Srivastava2019fairnessnotions} discusses how algorithms and humans might disagree in this case on the notions of fairness in a way that their response might even be the exact opposite of the fairness definitions. Green and Chen (2019) \cite{Green2019algointheloop} found that the racial disparity in human assessment of risk scores increased after they were provided with the risk scores that were produced by a racially fair algorithm. Besides algorithms, other factors may skew human responses which can skew the current outcomes or the outcomes in the next iterations.
+        
+        Unfairness as we described can happen in any stage of the machine learning systems. Each part needs different interventions to mitigate the biases. Although, the bias that is removed in one stage can be re-introduces in another stage of the pipeline.
+        
+    % \todo[inline]{should I have the table of different biases in ML that is in the book chapter?}
     
-    \todo[inline]{create a plot or doodle and add and refer to it here.}
+    % \subsection{Mitigation methods}
+    % To mitigate algorithmic unfairness, interventions can be made at different steps of the processing pipeline. \cite{Friedler2019} provides a broad overview of these methods.
+    % \todo[inline]{missing - maybe having a common section for both ML and recsys?!}
     
-    \textbf{Society} or the outside world may be unfair. This type of bias is usually historical and ongoing. Redlining in United States housing policies \cite{rothstein2017color} is an example of this type of bias, which prevented Black Americans from home ownership in wealthier neighborhoods; neighborhoods with better amenities such as parks or better schools that improve the quality of life and childhood development. Due to such actions by private-sector and government policies, Black residents were prohibited from accessing the same opportunities for wealth building which has lead to significant racial disparity in wealth through home ownership and even disparate quality of education.
-    
-    \textbf{Data} is another source of bias. The data can get biased during the data collection process. In some cases, some people are more likely to respond to surveys or volunteer information. This type of bias is know as response or submission bias. 
-    
-    Sampling strategies are used to collect a certain amount of data for a specific purpose might fail to collect a sample that is representative of the real data or the real world. This issue can contribute to representation bias.
-    
-    The previous issues may construct an imbalanced data where the size of different users differ. In this case, the prediction/recommendation models may become more accurate for the groups with greater group sizes as they have more data while being more erroneous in predictions for smaller sized groups.
-    
-    In the data collection process, sometimes the perspective of the people involved in the the process  can invite bias into the data, particularly if there is little engagement with the stakeholders (for whom we are providing a service) to understand their needs. These biases will go undetectable if there is not a clear documentation of the perspectives and assumptions that went into its design \cite{Hutchinson2021Account}. 
-    Lack of documentation, becomes problematic particularly when such sensitive personal attributes such as gender or race are recorded. Categorization of such attributes like gender is usually adapted from administrative data collection which might not be inclusive of all the differences. Therefore, their categorization and how they are recorded vary over time as the social and cultural constructs evolve \cite{Hanna2020CriticalRace}. Therefore it is important to interpret the data according to its time and also according to the cultural and social contexts to avoid the previous biases and to avoid unfairly disregarding local knowledge and perspectives.
-    
-    Mitchell \cite{mitchell2021algorithmic} differentiates between the societal bias and systematic or statistical bias. Societal bias is the deviation between the \textit{the world as it should and could be} and \textit{the world as it is}. Redlining is an example of societal bias, since without this bias, the world could be different with Black residents living in any neighborhood. Statistical bias results in systematic discrepancies between \textit{the world as is} and \textit{the world that the data represents}. For example, if the records of housing information differs from the actual housing, it can cause a systematic mismatch.
-    
-    \textbf{Models} can also exacerbate the existing unfairness or introduce unfairness. Models can learn to discriminate based on the sensitive attributes with or without having these attributes in the data. Models can indirectly learn the sensitive attributes based on the correlations of other variables with the sensitive attributes or the behavioral patterns associated with those attributes.
-    
-    The objective functions may also include biased perspectives about what constitutes a \textit{good} model and result in biased outcomes.
-    
-    \textbf{Evaluation} of machine learning algorithms is also bias prune. All of the issues with data that we discussed before (such as sampling strategies, group sizes, etc.) apply to evaluation as well. The perspectives in the design of the evaluation metric, and how these perspectives define success in the outcome can bias the outcomes. For example, if the evaluation metric is aggregate, it will hide the biases for the minority group. Or some metrics measure and reflect success on stakeholder while other experience bias. 
-    
-    Therefore, the perspective of the decision makers involved in the design of the metric, the model, the data collection methods can bias the outcomes.
-    
-    \textit{Human responses} are another factor that bias the outcomes. Some of the machine learning systems are interactive, so they record human responses to their results and feed this data back to the system. Srivastava et al. (2019) \cite{Srivastava2019fairnessnotions} discusses how algorithms and humans might disagree in this case on the notions of fairness in a way that their response might even be the exact opposite of the fairness definitions. Green and Chen (2019) \cite{Green2019algointheloop} found that the racial disparity in human assessment of risk scores increased after they were provided with the risk scores that were produced by a racially fair algorithm. Besides algorithms, other factors may skew human responses which can skew the current outcomes or the outcomes in the next iterations.
-    
-    Unfairness as we described can happen in any stage of the machine learning systems. Each part needs different interventions to mitigate the biases. Although, the bias that is removed in one stage can be re-introduces in another stage of the pipeline.
-    
-    \todo[inline]{should I have the table of different biases in ML that is in the book chapter?}
-    
-    \subsection{Concepts}
-    
-    %group fairness
-    %individual fairness
-    
-    \subsection{Mitigation methods}
+    The algorithmic fairness literature has identified a number of different constructs for measuring and reducing fairness, but these constructs are not always mathematically or conceptually compatible. This could be due to differences in their assumptions about the data, their ethical goals or their social contexts. Therefore it is crucial to defined and assessed in a specific problem setting in light of its full sociotechnical context.
 
+    To define fairness for recommender system, in addition to the previous categorizations, we also need to account for the unique challenges that arises in recommender systems: personalization and the multi-stakeholder problem. I will discuss these issues discussed in the following section \ref{sec:fairness_recsys}.
 
 \section{Fairness in Recommender Systems}
 \label{sec:fairness_recsys}
 \todo[inline]{missing}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+% In addition to the group vs individual fairness distinction, recommender system fairness is also distinguished by the fact that fairness concerns may be formulated relative to multiple different stakeholders \cite{burke2017multisided,abdollahpouri2020multistakeholder}. In particular, we may be concerned about fairness towards consumers of recommendations (end-users) and providers of items being recommended. Consumer-side group fairness asks whether the system is fair to different groups of users: for example, male, female and non-binary job seekers getting recommendations of job listings. Provider-side group fairness asks whether the system is fair to different groups of item providers: for example, male, female and non-binary musical artists whose tracks are being recommended.
+
+
+
 
 
 \todo[inline]{do they belong under the fairness in recommender systems?}
@@ -121,7 +194,7 @@ Consumer fairness (C-fairness) is concerned with the ways recommender systems im
     Yao and Huang \cite{yao_huang_fatml-2017} discuss different kinds of error-based unfairness metrics for collaborative filtering that captures different types of disparate prediction errors for protected and unprotected groups. They both calculate the overall disparate errors and over- and under- estimations of predictions. Ekstrand et al. \cite{ekstrand2018all} disaggregated off-line top-N evaluation of several collaborative filtering algorithms (measured by nDCG) and compared the results for different user demographics. They found statistically significant differences in utility between gender and some age groups. This disparity in utility is similar to the disparate impact concept because we observe a discrepancy in the outcomes for different groups. Ekstrand et al. \cite{ekstrand2021fairness} discusses that since information access systems (including recommender systems) don't directly make a decision about the users based on their differences in a protected attribute, disparate impact can be translated to \textit{disparate effectiveness} instead where the system is more or less effective for different user groups. 
     
     \subsection{Accuracy-based Fairness}
-    Different approaches have been offered to correct inequitable distributions of system utility. Yao and Huang \cite{yao2017beyond} introduce regularizers to mitigate discrepancies in rating prediction errors. Re-ranking recommendations to improve their fairness is also a post-processing approach that can be used for this goal. This method is mostly used to mitigate provider-side fairness, but there are examples of its usage for consumer fairness in Abdollahpouri \cite{abdollahpouri2020popularity}. In their research, user groups are defines based on their level of interests towards popular items and then it is showed that there is a utility discrepancy between users who like popular items versus the users who like niche less popular items. The latter group experiences lower quality recommendations. \cite{abdollahpuri20} also presents a re-ranking approach based on idea of calibration in Steck \cite{steck2018calibrated} to improve the fairness for these consumer groups.
+    Different approaches have been offered to correct inequitable distributions of system utility. Yao and Huang \cite{yao2017beyond} introduce regularizers to mitigate discrepancies in rating prediction errors. Re-ranking recommendations to improve their fairness is also a post-processing approach that can be used for this goal. This method is mostly used to mitigate provider-side fairness, but there are examples of its usage for consumer fairness in Abdollahpouri \cite{abdollahpouri2020popularity}. In their research, user groups are defines based on their level of interests towards popular items and then it is showed that there is a utility discrepancy between users who like popular items versus the users who like niche less popular items. The latter group experiences lower quality recommendations. \cite{abdollahpouri2020addressing} also presents a re-ranking approach based on idea of calibration in Steck \cite{steck2018calibrated} to improve the fairness for these consumer groups.
     
     While using algorithmic interventions to reduce disparate effectiveness, we should cautiously bear in mind the difference between consumer side fairness and provider side fairness. In consumer fairness, users is not a rivalrous good therefore increasing the utility for one group doesn't corrupt the utility for the other users. However, in provider fairness, the recommendation spots are limited and providers compete to get those slot. 
     
