--- a/chapter5-inprocess.tex
+++ b/chapter5-inprocess.tex
@@ -1,10 +1,10 @@
 \chapter{Fairness through regularization}
-\label{fairness_inproc}
+\label{ch:fairness_inproc}
 
 % the integrated approach or in-processing
 
-\todo[inline]{changing the title to in-processing methods to achieve fairness?}
-\todo[inline]{accuracy or utility or personalization in general?}
+% \todo[inline]{changing the title to in-processing methods to achieve fairness?}
+% \todo[inline]{accuracy or utility or personalization in general?}
 
 As we discussed in \ref{fairness}, there are three main approaches to integrate fairness notions into recommender systems: pre-processing, in-processing and post-processing.
 
