--- a/chapter6-postprocess.tex
+++ b/chapter6-postprocess.tex
@@ -1,5 +1,5 @@
 \chapter{Fairness through post-processing}
-\label{fairness_postproc}
+\label{ch:fairness_postproc}
 
 \todo[inline]{missing some initial sentences}
 One application of re-ranking is to improve the \textit{diversity} of the results. As an example Maximum marginal relevance (MMR) adjusts the balance in the re-ranked list by minimizing the similarity between the new item and the previous chosen items \cite{carbonell1998use} while maximizing their relevance. The main idea in MMR is to avoid redundancy, in other words if one item doesn't meet a user's need, it's likely that another similar item to that won't suit the user as well. \cite{Ziegler:2005:IRL:1060745.1060754} provides another approach to diversify the ranked lists that operates only on item orderings instead of balancing similarity or relevance. 
