--- a/main.tex
+++ b/main.tex
@@ -95,17 +95,33 @@
 	But this one isn't, so it should.
 	}
 
-\dedication[Dedication]{	% NEVER use \OnePageChapter here.
-	To all of my fluffy socks.
-	}
+% \dedication[Dedication]{	% NEVER use \OnePageChapter here.
+% % 	To all of my fluffy socks.
+%     I dedicate my dissertation work to my family. A special feeling of gratitude to my loving parents, Mahvash and Ali whose words of encouragement and push for tenacity ring in my ears. My sisters Ronak, and Rojan who have never left my side and are very special.
+%     I also dedicate this dissertation to my friends who have supported me throughout the process. I will always appreciate all they have done, especially Nikki Hariri for her great advice and for being there for me throughout the entire doctorate program.
+%     % for helping me develop my technology skills, LaTanja Riley-Hedgepeth for the many hours of proofreading, and Ramona Taylor for helping me to master the leader dots.
+%     % I dedicate this work and give special thanks to my best friend Nelson L. Jennings and my wonderful daughter Cimone for being there for me throughout the entire doctorate program. Both of you have been my best cheerleaders.
+
+% 	}
 
 \acknowledgements{	\OnePageChapter	% *MUST* BE ONLY ONE PAGE!
-	Here's where you acknowledge folks who helped.
-	But keep it short, i.e., no more than one page,
-	as required by the Grad School Specifications.
+    % 	Here's where you acknowledge folks who helped. But keep it short, i.e., no more than one page, as required by the Grad School Specifications.
+    
+    This dissertation would not have been possible without the involvement of \todo{edit}
+    
+    % I also would like to thank Dr. Robin Burke for not only helping me persevere through the challenges of completing a PhD but for inspiring me to pursue my passion in the first place. You gave me the courage to take the risks that I needed to take to become the person I have always wanted to be. You've encouraged me to embrace uncertainty and complexity in the face of my natural inclination towards order and certainty. Rather than shutting down my curiosity about the world, you've always encouraged me to dig deeper no matter where that may take me. I am so incredibly fortunate to have such a wonderful person as not only my wife but also as a colleague.
+    
+    %  other people who have been instrumental in encouraging me to pursue this research are  Sterling and . In my master's program, both  sparked a curiosity in me that could not be extinguished. As I neared the end of the short two-year program, both   encouraged me to continue pursuing my interests and for that, I am incredibly grateful. To this day, I am constantly astounded that ....saw something promising enough in me to employ me as a research assistant in ... lab, which kicked off my research career.
+    
+    % And of course, I could not have completed this research without the support of ..., my doctoral advisor. I am fortunate to have had such a passionate individual... I have learned so much from you and have grown in so many ways as a researcher, teacher, and collaborator as a result of your meticulous advising. I am amazed at your ability to not only understand my passion (often before I do myself), to see the path forward, and to support me in coming to a conclusion myself. It wasn't always efficient or easy, but you somehow found a way to strike a balance between giving me advice and letting me learn for myself. Thank you for your dedication and support over the years, I could not have done this without you.
+    
+    % Finally, none of this would have been possible and I would not be where I am today were it not for my parents. You emphasized the importance of education and made sure that I worked hard towards earning my bachelor's degree. I know that the education I've pursued since then and the decisions that I've made haven't always seemed the most practical, but you've both always supported me unconditionally and for that I am grateful.
+    
+    % I dedicate my dissertation work to my family. A special feeling of gratitude to my loving parents, Mahvash and Ali whose words of encouragement and push for tenacity ring in my ears. My sisters Ronak, and Rojan who have never left my side and are very special.
+    % I also dedicate this dissertation to my friends who have supported me throughout the process. I will always appreciate all they have done, especially Nikki Hariri for her great advice and for being there for me throughout the entire doctorate program.
+
 	}
 
-% \IRBprotocol{E927F29.001X}	% optional!
 
 \ToCisShort	% use this only for 1-page Table of Contents
 
