--- a/refs.bib
+++ b/refs.bib
@@ -2035,6 +2035,7 @@ series = {RecSys '18}
   organization={ACM Press/Addison-Wesley Publishing Co.}
 }
 
+
 @inproceedings{ali2004tivo,
   title={TiVo: making show recommendations using a distributed collaborative filtering architecture},
   author={Ali, K. and Van Stam, W.},
@@ -2188,6 +2189,40 @@ series = {RecSys '18}
   pages={688--693},
   year={1999},
   organization={Citeseer}
+}
+
+@book{noble2018algorithms,
+  title={Algorithms of oppression},
+  author={Noble, Safiya Umoja},
+  year={2018},
+  publisher={New York University Press}
+}
+
+@inproceedings{Chaney2018Homogeneity,
+author = {Chaney, Allison J. B. and Stewart, Brandon M. and Engelhardt, Barbara E.},
+title = {How Algorithmic Confounding in Recommendation Systems Increases Homogeneity and Decreases Utility},
+year = {2018},
+isbn = {9781450359016},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3240323.3240370},
+doi = {10.1145/3240323.3240370},
+booktitle = {Proceedings of the 12th ACM Conference on Recommender Systems},
+pages = {224–232},
+numpages = {9},
+location = {Vancouver, British Columbia, Canada},
+series = {RecSys '18}
+}
+
+@article{baeza2018bias,
+  title={Bias on the web},
+  author={Baeza-Yates, Ricardo},
+  journal={Communications of the ACM},
+  volume={61},
+  number={6},
+  pages={54--61},
+  year={2018},
+  publisher={ACM New York, NY, USA}
 }
 
 @inproceedings{jin2004web,
@@ -4608,6 +4643,117 @@ archivePrefix = {arXiv},
   doi={10.1007/s11257-019-09256-1},
   year={2020},
 }
+
+
+@Inbook{Adomavicius2011context,
+author="Adomavicius, Gediminas
+and Tuzhilin, Alexander",
+editor="Ricci, Francesco
+and Rokach, Lior
+and Shapira, Bracha
+and Kantor, Paul B.",
+title="Context-Aware Recommender Systems",
+bookTitle="Recommender Systems Handbook",
+year="2011",
+publisher="Springer US",
+address="Boston, MA",
+pages="217--253",
+isbn="978-0-387-85820-3",
+doi="10.1007/978-0-387-85820-3_7",
+url="https://doi.org/10.1007/978-0-387-85820-3_7"
+}
+
+
+@article{HRW2018ads,
+  title={“Only Men Need Apply”,Gender Discrimination in Job Advertisements in China},
+  author={Brian Stauffer},
+  publisher={Human Rights Watch},
+  year={2018},
+}
+
+
+@inproceedings{Korolova2021JobAds,
+author = {Imana, Basileal and Korolova, Aleksandra and Heidemann, John},
+title = {Auditing for Discrimination in Algorithms Delivering Job Ads},
+year = {2021},
+isbn = {9781450383127},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3442381.3450077},
+doi = {10.1145/3442381.3450077},
+pages = {3767–3778},
+numpages = {12},
+location = {Ljubljana, Slovenia},
+series = {WWW '21}
+}
+
+
+@inproceedings{Cosley2003Influence,
+author = {Cosley, Dan and Lam, Shyong K. and Albert, Istvan and Konstan, Joseph A. and Riedl, John},
+title = {Is Seeing Believing? How Recommender System Interfaces Affect Users' Opinions},
+year = {2003},
+isbn = {1581136307},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/642611.642713},
+doi = {10.1145/642611.642713},
+booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+pages = {585–592},
+numpages = {8},
+location = {Ft. Lauderdale, Florida, USA},
+series = {CHI '03}
+}
+
+
+@inproceedings{Said2015Replicable,
+author = {Said, Alan and Bellog\'{\i}n, Alejandro},
+title = {Replicable Evaluation of Recommender Systems},
+year = {2015},
+isbn = {9781450336925},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2792838.2792841},
+doi = {10.1145/2792838.2792841},
+booktitle = {Proceedings of the 9th ACM Conference on Recommender Systems},
+pages = {363–364},
+numpages = {2},
+location = {Vienna, Austria},
+series = {RecSys '15}
+}
+
+@inproceedings{Said2012MagicBarrier,
+author = {Said, Alan and Jain, Brijnesh J. and Narr, Sascha and Plumbaum, Till and Albayrak, Sahin and Scheel, Christian},
+title = {Estimating the Magic Barrier of Recommender Systems: A User Study},
+year = {2012},
+isbn = {9781450314725},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2348283.2348469},
+doi = {10.1145/2348283.2348469},
+booktitle = {Proceedings of the 35th International ACM SIGIR Conference on Research and Development in Information Retrieval},
+pages = {1061–1062},
+numpages = {2},
+location = {Portland, Oregon, USA},
+series = {SIGIR '12}
+}
+
+
+@inproceedings{McAuley2013expertise,
+author = {McAuley, Julian John and Leskovec, Jure},
+title = {From Amateurs to Connoisseurs: Modeling the Evolution of User Expertise through Online Reviews},
+year = {2013},
+isbn = {9781450320351},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2488388.2488466},
+doi = {10.1145/2488388.2488466},
+booktitle = {Proceedings of the 22nd International Conference on World Wide Web},
+pages = {897–908},
+numpages = {12},
+location = {Rio de Janeiro, Brazil},
+series = {WWW '13}
+}
+
 
 @article{abdollahpouri2020addressing,
   title={Addressing the Multistakeholder Impact of Popularity Bias in Recommendation Through Calibration},
